base for character creation
